@@ -14,6 +14,7 @@ Released ????? ??, ????
 - Saudi Arabia fixes #642 (OsaydAbdu)
 - Spain fixes #634 (javicalle)
 - US fixes #648 (dashdrum)
+- India doc fixes #657 (dr-p)
 
 
 Version 0.13
